kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-pod
  template:
    metadata:
      labels:
        app: homework-pod
    spec:
      nodeSelector:
         homework: "true"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - homework-pod
              topologyKey: kubernetes.io/hostname
      containers:
        - name: web-server
          image: python:3.9-slim
          ports:
            - containerPort: 8000
          command: ['sh', '-c', 'python -m http.server 8000 --directory /homework']
          volumeMounts:
            - name: workdir
              mountPath: /homework
            - name: config
              mountPath: /homework/conf
          lifecycle:
            preStop:
              exec:
                command: ['sh', '-c', 'rm -f /homework/index.html']
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
      volumes:
        - name: workdir
          persistentVolumeClaim:
            claimName: local-pvc
        - name: config
          configMap:
            name: app-config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
